sron_gridsearch
nohup: ignoring input
Traceback (most recent call last):
  File "/home/francescapoli/miniconda3/envs/myenv/lib/python3.9/runpy.py", line 188, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/francescapoli/miniconda3/envs/myenv/lib/python3.9/runpy.py", line 111, in _get_module_details
    __import__(pkg_name)
  File "/home/francescapoli/archetype-computing-adaptive-system/spiking_arch/__init__.py", line 1, in <module>
    from .s_ron import SpikingRON
  File "/home/francescapoli/archetype-computing-adaptive-system/spiking_arch/s_ron.py", line 43
    topology: Literal[
    ^
SyntaxError: non-default argument follows default argument
